--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
     "next": "14.2.3",
     "react": "^18",
     "react-color": "^2.19.3",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-masonry-css": "^1.0.16"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
 }
