--- a/package.json
+++ b/package.json
@@ -9,14 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.587.0",
+    "@img-comparison-slider/react": "^8.0.2",
+    "@types/next-auth": "^3.15.0",
+    "aws-sdk": "^2.1631.0",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
+    "formidable": "^3.5.1",
+    "mongoose": "^8.4.0",
+    "mongose": "^0.0.2-security",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-color": "^2.19.3",
     "react-dom": "^18",
     "react-masonry-css": "^1.0.16"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
