--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formidable": "^3.5.1",
     "mongoose": "^8.4.0",
     "mongose": "^0.0.2-security",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
